# hpc_final

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp
test/: DisplayImage  DisplayImage.cpp  test_mpi
